// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SolutionsDetailsTemplate /> render matches snapshot 1`] = `
<article
  className="solutions-details-page"
  id="solutions-details-page"
>
  <div
    className="container"
  >
    <div
      className="row"
    >
      <section
        className="details-wrapper col-lg-offset-1 col-lg-10"
      >
        <div
          className="content-wrapper"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
          />
        </div>
      </section>
    </div>
    <div
      className="row"
    >
      <section
        className="col-xs-12 col-lg-offset-1 col-lg-10 learn-more-section"
      >
        <h2>
          Learn More
        </h2>
        <hr />
        <div>
          <span
            className="solution-name"
            dangerouslySetInnerHTML={
              Object {
                "__html": "detail1",
              }
            }
          />
          <button
            aria-disabled={false}
            className="fn-primary learn-more-button"
            onClick={[Function]}
          >
            Request Information
          </button>
        </div>
      </section>
    </div>
  </div>
</article>
`;

exports[`<SolutionsDetailsTemplate /> render renders lead capture section 1`] = `
<article
  className="solutions-details-page"
  id="solutions-details-page"
>
  <div
    className="container"
  >
    <div
      className="row"
    >
      <section
        className="details-wrapper col-lg-offset-1 col-lg-10"
      >
        <div
          className="content-wrapper"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
          />
        </div>
      </section>
    </div>
    <div
      className="row"
    >
      <section
        className="col-xs-12 col-lg-offset-1 col-lg-10 learn-more-section"
      >
        <h2>
          Learn More
        </h2>
        <hr />
        <div>
          <span
            className="solution-name"
            dangerouslySetInnerHTML={
              Object {
                "__html": "detail1",
              }
            }
          />
          <button
            aria-disabled={false}
            className="fn-primary learn-more-button"
            onClick={[Function]}
          >
            Request Information
          </button>
        </div>
      </section>
    </div>
  </div>
</article>
`;

exports[`<SolutionsDetailsTemplate /> render renders lead capture section 2`] = `
<article
  className="solutions-details-page"
  id="solutions-details-page"
>
  <div
    className="container"
  >
    <div
      className="row"
    >
      <section
        className="details-wrapper col-lg-offset-1 col-lg-10"
      >
        <div
          className="content-wrapper"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
          />
        </div>
      </section>
    </div>
    <div
      className="row"
    >
      <section
        className="col-xs-12 col-lg-offset-1 col-lg-10 learn-more-section"
      >
        <h2>
          Learn More
        </h2>
        <hr />
        <div>
          <span
            className="solution-name"
            dangerouslySetInnerHTML={
              Object {
                "__html": "detail1",
              }
            }
          />
          <button
            aria-disabled={false}
            className="fn-primary learn-more-button"
            onClick={[Function]}
          >
            Request Information
          </button>
        </div>
      </section>
    </div>
  </div>
</article>
`;

exports[`<SolutionsDetailsTemplate /> render renders lead capture section 3`] = `
<article
  className="solutions-details-page"
  id="solutions-details-page"
>
  <div
    className="container"
  >
    <div
      className="row"
    >
      <section
        className="details-wrapper col-lg-offset-1 col-lg-10"
      >
        <div
          className="content-wrapper"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
          />
        </div>
      </section>
    </div>
    <div
      className="row"
    >
      <section
        className="col-xs-12 col-lg-offset-1 col-lg-10 learn-more-section"
      >
        <h2>
          Learn More
        </h2>
        <hr />
        <div>
          <span
            className="solution-name"
            dangerouslySetInnerHTML={
              Object {
                "__html": "detail1",
              }
            }
          />
          <button
            aria-disabled={false}
            className="fn-primary learn-more-button"
            onClick={[Function]}
          >
            Request Information
          </button>
        </div>
      </section>
    </div>
  </div>
</article>
`;

exports[`<SolutionsDetailsTemplate /> render renders purchasing info section 1`] = `
<article
  className="solutions-details-page"
  id="solutions-details-page"
>
  <div
    className="container"
  >
    <div
      className="row"
    >
      <section
        className="details-wrapper col-lg-offset-1 col-lg-10"
      >
        <div
          className="content-wrapper"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
          />
        </div>
      </section>
    </div>
    <div
      className="row"
    >
      <section
        className="col-xs-12 col-lg-offset-1 col-lg-10 learn-more-section"
      >
        <h2>
          Learn More
        </h2>
        <hr />
        <div>
          <span
            className="solution-name"
            dangerouslySetInnerHTML={
              Object {
                "__html": "detail1",
              }
            }
          />
          <button
            aria-disabled={false}
            className="fn-primary learn-more-button"
            onClick={[Function]}
          >
            Request Information
          </button>
        </div>
      </section>
    </div>
    <div
      className="row"
    >
      <section
        className="col-xs-12 col-lg-offset-1 col-lg-10"
      />
    </div>
    <div
      className="row"
    >
      <section
        className="col-xs-12 col-lg-offset-1 col-lg-10 app-details-section"
      >
        <h2>
          Related App
        </h2>
        <hr />
      </section>
    </div>
  </div>
</article>
`;

exports[`<SolutionsDetailsTemplate /> render renders related app section 1`] = `
<article
  className="solutions-details-page"
  id="solutions-details-page"
>
  <div
    className="container"
  >
    <div
      className="row"
    >
      <section
        className="details-wrapper col-lg-offset-1 col-lg-10"
      >
        <div
          className="content-wrapper"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
          />
        </div>
      </section>
    </div>
    <div
      className="row"
    >
      <section
        className="col-xs-12 col-lg-offset-1 col-lg-10 learn-more-section"
      >
        <h2>
          Learn More
        </h2>
        <hr />
        <div>
          <span
            className="solution-name"
            dangerouslySetInnerHTML={
              Object {
                "__html": "detail1",
              }
            }
          />
          <button
            aria-disabled={false}
            className="fn-primary learn-more-button"
            onClick={[Function]}
          >
            Request Information
          </button>
        </div>
      </section>
    </div>
    <div
      className="row"
    >
      <section
        className="col-xs-12 col-lg-offset-1 col-lg-10 app-details-section"
      >
        <h2>
          Related App
        </h2>
        <hr />
      </section>
    </div>
  </div>
</article>
`;
